Fix overflow issues with fancy header

--- a/src/FancyHeader.css
+++ b/src/FancyHeader.css
@@ -4,7 +4,14 @@
 }
 
 .fancy-header-mobile {
+  font-size: 1.5rem;
   padding-bottom: 5rem;
+}
+
+@media (max-width: 350px) {
+  .fancy-header-mobile {
+    font-size: 1.35rem;
+  }
 }
 
 .fancy-header, .fancy-header-mobile {
@@ -12,45 +19,46 @@
   text-align: center;
   font-weight: bold;
   letter-spacing: 1px;
-  white-space: nowrap;
 }
 
-.fancy-header span {
+.fancy-header div {
   display: inline-block;
   position: relative;
   margin: 0 auto;
 }
 
-.fancy-header span:before,
-.fancy-header span:after {
+.fancy-header div:before,
+.fancy-header div:after {
   content: "";
   position: absolute;
   width: calc(25vw - 50%);
-  height: 1.0em;
-  margin: 0.5em 1em 0;
+  height: 1em;
+  margin: 0.75em 1em 0;
   border-top: 1px solid;
 }
 
-.fancy-header span:before {
+.fancy-header div:before {
   right: 100%;
   text-align: left;
 }
 
-.fancy-header span:after {
+.fancy-header div:after {
   left: 100%;
   text-align: right;
 }
 
-.fancy-header-mobile span {
+.fancy-header-mobile div {
   position: relative;
-  font-size: 1.75rem;
+  display: inline-block;
 }
 
-.fancy-header-mobile span:after {
+.fancy-header-mobile div:after {
   content: "";
   position: absolute;
   width: 50%;
-  left: 25%;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
   bottom: -0.5em;
   border-bottom: 1px solid;
 }
